Tab functionality. All index pages templatized.

--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -1,48 +1,4 @@
-<% provide(:title, 'Documents') %>
-<% provide(:heading, 'Document Dashboard') %>
-
-<p>
-<div class="row">
-      <div class="col-md-9 col-sm-9 col-xs-9 pull-left">
-        <%= render partial: 'layouts/index/search' %>
-      </div>
-      <div class="col-md-3 col-sm-3 col-xs-3">
-        <%= render partial: 'layouts/index/add_button', locals: {name: "Document"} %>
-      </div>
-</div>
-   </p> 
-    
-    
-    
-    
-    
-    <div class="table-responsive">
-    <table class="table table-striped table-hover">
-      <thead>
-        <tr>
-          <th>
-            Driver
-		  </th>
-		  <th>
-          	Title
-          </th>
-		  <th></th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @documents.each do |document| %>
-          <tr>
-          <% if document.driver.nil? %>
-            <td><strong>None</strong></td>
-          <% else %>
-            <td><%= document.driver.last_name %>, <%= document.driver.first_name %> <%= document.driver.middle_name %></td>
-          <% end %>
-            <td><%= document.title %></td>
-            <td><%= render partial: 'layouts/index/row_buttons', locals: {item: document} %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-    </div>
-    <br>
+<% @column_titles = [ {:sort => "driver", :title=>"Driver"}, {:sort => "title", :title => "Title"} ] %>
+<%= render partial: "layouts/index", locals: {type: "Document", items: @documents, titles: @column_titles} %>
+ 
+<!-- To specify how row cells are populated, modify documents/_row_content.html.erb -->
