--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -6,4 +6,4 @@
             
 <%= render partial: "layouts/index", locals: {type: "Driver", items: @drivers, titles: @column_titles} %>
  
-<!-- To specify how each cell is populated, modify layouts/index/_row.html.erb -->
+<!-- To specify how row cells are populated, modify drivers/_row_content.html.erb -->
