--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,39 +1,7 @@
-<% provide(:title, 'Companies') %>
-<% provide(:heading, 'Company Dashboard') %>
+<% @column_titles = [ 
+    {:sort => "name", :title=>"Name"},
+    {:sort => "drivers.length", :title => "Number of Drivers"}] %>
     
-<div class="row">
-      <div class="col-md-9 col-sm-9 col-xs-9 pull-left">
-        <%= render partial: 'layouts/index/search' %>
-      </div>
-      <div class="col-md-3 col-sm-3 col-xs-3">
-        <%= render partial: 'layouts/index/add_button', locals: {name: "Company"} %>
-      </div> 
-</div>
-    
+<%= render partial: "layouts/index", locals: {type: "Company", items: @companies, titles: @column_titles} %>
 
-    <div class="table-responsive">
-    <table class="table table-striped table-hover">
-      <thead>
-        <tr>
-          <th>
-            Name
-		  </th>
-		  <th>
-          	Number of Drivers
-          </th>
-		  <th></th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @companies.each do |company| %>
-          <tr>
-            <td><%= company.name %></td>
-            <td><%= company.drivers.length %></td>
-            <td><%= render partial: 'layouts/index/row_buttons', locals: {item: company} %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-    </div>
-    <br>
+<!-- to change cells for each row, modify companies/_row_content.html.erb -->
