--- a/app/views/layouts/_index.html.erb
+++ b/app/views/layouts/_index.html.erb
@@ -1,18 +1,20 @@
-<% provide(:title, "#{type}s") %>
+<% provide(:title, "#{type} Dashboard") %>
 <% provide(:heading, "#{type} Dashboard") %>
 
-  <p>  <div class="row">
-          <div class="col-md-9 col-sm-9 col-xs-9 pull-left">
-            <%= render partial: 'layouts/index/search' %>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-3">
-            <%= render partial: 'layouts/index/add_button', locals: {name: type} %>
-          </div>
-    </div>
-    </p>
-    <div class="row">
-      <table class="table table-striped table-hover col-md-12 col-sm-12 col-xs-12">
-        <thead><%= render partial: 'layouts/index/thead', locals: {titles: @column_titles} %></thead>
-        <tbody><%= render partial: 'layouts/index/tbody', locals: {items: items} %></tbody>
-      </table>
-    </div>
+<p>
+<div class="row">
+  <div class="col-md-9 col-sm-9 col-xs-9 pull-left">
+      <%= render partial: 'layouts/index/search' %>
+  </div>
+  <div class="col-md-3 col-sm-3 col-xs-3">
+      <%= render partial: 'layouts/index/add_button', locals: {name: type} %>
+  </div>
+</div>
+</p>
+
+<div class="row">
+  <table class="table table-striped table-hover col-md-12 col-sm-12 col-xs-12">
+    <thead><%= render partial: 'layouts/index/thead', locals: {titles: @column_titles} %></thead>
+    <tbody><%= render partial: 'layouts/index/tbody', locals: {items: items} %></tbody>
+  </table>
+</div>
