--- a/app/views/layouts/index/_row_buttons.html.erb
+++ b/app/views/layouts/index/_row_buttons.html.erb
@@ -1,25 +1,30 @@
+<% @item_controller = controller_path %>
+<% if @item_controller == 'drivers' && (controller.action_name == 'ratings' || controller.action_name == 'documents') %>
+    <% @item_controller = controller.action_name %>
+<% end %>
+
 <span class="btn-toolbar pull-right">
     <div class="btn-group">
-    <% if controller.controller_path == 'drivers' %>
+    <% if (@item_controller == 'drivers')%>
         <%= button_to({controller: "documents", driver_id: item, action: 'new'}, 
             method: :get, title: "Attach Doc", role: "button", class: "btn btn-xs btn-nav") do %>
             <span class="glyphicon glyphicon-paperclip"></span>
         <% end %>
     <% else %>
-        <%= button_to({controller: controller.controller_path, id: item, action: 'show'}, 
+        <%= button_to({controller: @item_controller, id: item, action: 'show'}, 
             method: :get, title: "Show", role: "button", class: "btn btn-xs btn-nav") do %>
             <span class="glyphicon glyphicon-eye-open"></span>
         <% end %>
     <% end %>
     </div>
     <div class="btn-group">
-    <%= button_to({controller: controller.controller_path, id: item, action: 'edit'}, 
+    <%= button_to({controller: @item_controller, id: item, action: 'edit'}, 
         method: :get, title: "Edit", role: "button", class: "btn btn-xs btn-nav") do %>
         <span class="glyphicon glyphicon-pencil"></span>
     <% end %>
     </div>
     <div class="btn-group">
-    <%= button_to({controller: controller.controller_path, id: item, action: 'show'}, 
+    <%= button_to({controller: @item_controller, id: item, action: 'show'}, 
         method: :delete, title: "Destroy", class: "btn btn-xs btn-nav", role: "button",
         data: { confirm: 'Are you sure you want to delete?' }) do %>
         <span class="glyphicon glyphicon-trash"></span> 
