--- a/app/views/riders/index.html.erb
+++ b/app/views/riders/index.html.erb
@@ -1,37 +1,9 @@
-<% provide(:title, 'Riders') %>
-<% provide(:heading, 'Rider Dashboard') %>
+<% @column_titles = [ 
+    {:sort => "uuid", :title=>"Name"},
+    {:sort => "ratings.length", :title => "Total Ratings"}] %>
     
-    <p><div class="row">
-      <div class="col-md-9 col-sm-9 col-xs-9 pull-left">
-        <%= render partial: 'layouts/index/search' %>
-      </div>
-      <div class="col-md-3 col-sm-3 col-xs-3">
-        <%= render partial: 'layouts/index/add_button', locals: {name: "Rider"} %>
-      </div> 
-</div></p>
+<%= render partial: "layouts/index", locals: {type: "Rider", items: @riders, titles: @column_titles} %>
 
-    <div class="table-responsive">
-    <table class="table table-striped table-hover">
-      <thead>
-        <tr>
-          <th>
-            UUID
-         </th>
-          <th>
-            Total Ratings
-         </th>
-        </tr>
-      </thead>
+<!-- to change cells for each row, modify riders/_row_content.html.erb -->
 
-      <tbody>
-        <% @riders.each do |rider| %>
-          <tr>
-            <td><%= rider.uuid %></td>
-            <td><%= rider.ratings.length %></td>
-            <td><%= render partial: 'layouts/index/row_buttons', locals: {item: rider} %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-    </div>
-    <br>
+
