--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,46 +1,10 @@
-<% provide(:title, 'Users') %>
-<% provide(:heading, 'User Dashboard') %>
-
-<p>
-<div class="row">
-      <div class="col-md-9 col-sm-9 col-xs-9 pull-left">
-        <%= render partial: 'layouts/index/search' %>
-      </div>
-      <div class="col-md-3 col-sm-3 col-xs-3">
-        <%= render partial: 'layouts/index/add_button', locals: {name: "User"} %>
-      </div>
-</div>
-   </p>
-   
-   
-   
-    <!--          <h2 class="sub-header">Section title</h2> -->
-    <div class="table-responsive">
-    <table class="table table-striped table-hover">
-      <thead>
-        <tr>
-          <th>Last Name</th>
-          <th>First Name</th>
-          <th>Username</th>
-          <th>Last Sign In</th>
-          <th></th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @users.each do |user| %>
-          <tr>
-              <td><%= user.first_name %> </td>
-              <td><%= user.last_name %> </td>
-              
-              <td><%= user.username %> <%= user.admin ? "(ADMIN)" : ""%></td>
-              <td><%= user.last_sign_in_at.nil? ? "N/A" : user.last_sign_in_at.in_time_zone("America/Chicago") %></td>
-              <td><%= link_to '', edit_other_user_path(user.id) %>
-              <%= render partial: 'layouts/index/row_buttons', locals: {item: user} %></td>
-          </tr>
-      <% end %>
-          </tbody>
-      </table>
-  </div>
-  <br>
+<% @column_titles = [ 
+    {:sort => "last_name", :title=>"Last Name"},
+    {:sort => "first_name", :title => "First Name"},
+    {:sort => "username", :title => "Username"},
+    {:sort => "last_sign_in_at", :title => "Last Sign In"} ] %>
+            
+<%= render partial: "layouts/index", locals: {type: "User", items: @users, titles: @column_titles} %>
+ 
+<!-- To specify how row cells are populated, modify users/_row_content.html.erb -->
 
