Added graceful error handling for nil company

--- a/app/views/drivers/show.html.erb
+++ b/app/views/drivers/show.html.erb
@@ -98,7 +98,7 @@
 
 	<tr>
 	  	<th>Company name:</th>
-	  	<td><var><%= @driver.company_id %></var></td>
+	  	<td><var><%= @driver.company.nil? ? "NONE" : @driver.company.name %></var></td>
 	</tr>
 
 	<tr>
