--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -106,7 +106,7 @@
       </div>
       <div class="form-group">
         <%= f.label :company_name, :class => "col-sm-3 control-label" %>
-        <div class="col-sm-5"><%= f.select(:company_id, Company.select('name').all.map(&:name), {include_blank: true}) %></div>
+        <div class="col-sm-5"><%= f.select(:company_id, Company.all.collect{ |c| [ c.name, c.id ] }, {include_blank: true}) %></div>
       </div>
       <div class="form-group">
         <%= f.label :physical_expiration_date, :class => "col-sm-3 control-label" %>
