--- a/app/views/rides/_form.html.erb
+++ b/app/views/rides/_form.html.erb
@@ -11,31 +11,35 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :driver_id %><br>
-    <%= f.number_field :driver_id %>
+  <div class="form-horizontal">
+    <div class="form-group">
+      <%= f.label :driver_id, :class => "col-sm-3 control-label" %>
+      <div class="col-sm-5"><%= f.number_field :driver_id, :class => "form-control" %></div>
+    </div>
+    <div class="form-group">
+      <%= f.label :rider_id, :class => "col-sm-3 control-label" %>
+      <div class="col-sm-5"><%= f.number_field :rider_id, :class => "form-control" %></div>
+    </div>
+    <div class="form-group">
+      <%= f.label :start, :class => "col-sm-3 control-label" %>
+      <div class="col-sm-5"><%= f.number_field :start, :class => "form-control" %></div>
+    </div>
+    <div class="form-group">
+      <%= f.label :end, :class => "col-sm-3 control-label" %>
+      <div class="col-sm-5"><%= f.number_field :end, :class => "form-control" %></div>
+    </div>
+    <div class="form-group">
+      <%= f.label :estimated_fare, :class => "col-sm-3 control-label" %>
+      <div class="col-sm-5"><%= f.number_field :estimated_fare, :class => "form-control" %></div>
+    </div>
+    <div class="form-group">
+      <%= f.label :actual_fare, :class => "col-sm-3 control-label" %>
+      <div class="col-sm-5"><%= f.number_field :actual_fare, :class => "form-control" %></div>
+    </div>
+
+  <div class="col-sm-offset-3 col-sm-7">
+      <%= f.submit "Submit", :class=>"btn btn-primary" %>
   </div>
-  <div class="field">
-    <%= f.label :rider_id %><br>
-    <%= f.number_field :rider_id %>
   </div>
-  <div class="field">
-    <%= f.label :start %><br>
-    <%= f.text_field :start %>
-  </div>
-  <div class="field">
-    <%= f.label :end %><br>
-    <%= f.text_field :end %>
-  </div>
-  <div class="field">
-    <%= f.label :estimated_fare %><br>
-    <%= f.text_field :estimated_fare %>
-  </div>
-  <div class="field">
-    <%= f.label :actual_fare %><br>
-    <%= f.text_field :actual_fare %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+
 <% end %>
