--- a/app/views/rides/new.html.erb
+++ b/app/views/rides/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New ride</h1>
+<% provide(:title, "New Ride") %>
+<%= content_for :heading do %>
+    <%= render 'layouts/buttons/cancel_button' %>
+    New Ride
+<% end %>
+
 
 <%= render 'form' %>
-
-<%= link_to 'Back', rides_path %>
