--- a/app/views/documents/_row_content.html.erb
+++ b/app/views/documents/_row_content.html.erb
@@ -1,9 +1,9 @@
 <td class="table-link" onclick="<%= link %>">
-    <% if document.driver.nil? %>
+    <% if row.driver.nil? %>
       None 
     <% else %>
-      <%= document.driver.last_name %>, <%= document.driver.first_name %> <%= document.driver.middle_name %>
+      <%= row.driver.last_name %>, <%= row.driver.first_name %> <%= row.driver.middle_name %>
     <% end %>
 </td>
-<td class="table-link" onclick="<%= link %>"><%= document.title %></td>
+<td class="table-link" onclick="<%= link %>"><%= row.title %></td>
 
