--- a/app/views/companies/_row_content.html.erb
+++ b/app/views/companies/_row_content.html.erb
@@ -1,3 +1,4 @@
 <td class="table-link" onclick="<%= link %>"><%= row.name %></td>
 <td class="table-link" onclick="<%= link %>"><%= row.drivers.length %></td>
+<td class="table-link" onclick="<%= link %>"><%= row.average_rating %></td>
 
