--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -13,6 +13,7 @@
       <li class= <%= controller.controller_path == 'drivers' ? 'active' : '' %> ><%= link_to "Drivers", drivers_path %></li>
       <li class= <%= controller.controller_path == 'ratings' ? 'active' : '' %> ><%= link_to "Ratings", ratings_path %></li>    
       <li class= <%= controller.controller_path == 'riders' ? 'active' : '' %> ><%= link_to "Riders", riders_path %></li>    
+      <li class= <%= controller.controller_path == 'rides' ? 'active' : '' %> ><%= link_to "Rides", rides_path %></li>    
       <li class= <%= controller.controller_path == 'companies' ? 'active' : '' %> ><%= link_to "Companies", companies_path %></li>    
       <li class= <%= controller.controller_path == 'documents' ? 'active' : '' %> ><%= link_to "Documents", documents_path %></li>    
       <% if current_user.try(:admin?) %>
