--- a/app/views/riders/_row_content.html.erb
+++ b/app/views/riders/_row_content.html.erb
@@ -1,2 +1,2 @@
-<td class="table-link" onclick="<%= link %>">><%= row.uuid %></td>
-<td class="table-link" onclick="<%= link %>">><%= row.ratings.length %></td>
+<td class="table-link" onclick="<%= link %>"><%= row.uuid %></td>
+<td class="table-link" onclick="<%= link %>"><%= row.ratings.length %></td>
