Added sorting to users page, driver profile shows height in feet and inches

--- a/app/views/drivers/show.html.erb
+++ b/app/views/drivers/show.html.erb
@@ -96,12 +96,12 @@
 
 				<tr>
 				  	<th>Height:</th>
-				  	<td><var><%= @driver.height %></var></td>
+				  	<td><var><%= @driver.height/12 %></var>&nbspft&nbsp<var><%= @driver.height%12 %>&nbspin&nbsp</var></td>
 				</tr>
 
 				<tr>
 				  	<th>Weight:</th>
-				  	<td><var><%= @driver.weight %></var></td>
+				  	<td><var><%= @driver.weight %></var>&nbsplbs</td>
 				</tr>
 
 				<tr>
