--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -70,11 +70,11 @@
       </div>
       <div class="form-group">
         <%= f.label :height, :class => "col-sm-3 control-label" %>
-        <div class="col-sm-5"><%= f.number_field :height, :class=>"form-control", :size => 4%></div>
+        <div class="col-sm-5"><%= f.number_field :height, :class=>"form-control", :size => 4, :placeholder => "inches"%></div>
       </div>
       <div class="form-group">
         <%= f.label :weight, :class => "col-sm-3 control-label" %>
-        <div class="col-sm-5"><%= f.number_field :weight, :class=>"form-control", :size => 4%></div>
+        <div class="col-sm-5"><%= f.number_field :weight, :class=>"form-control", :size => 4, :placeholder => "lbs"%></div>
       </div>
       <div class="form-group">
         <%= f.label :license, :class => "col-sm-3 control-label" %>
@@ -106,7 +106,7 @@
       </div>
       <div class="form-group">
         <%= f.label :company_name, :class => "col-sm-3 control-label" %>
-        <div class="col-sm-5"><%= f.select(:company_id, Company.select('name').all.map(&:name), {include_blank: true}) %></div>
+        <div class="col-sm-5"><%= f.select(:company, Company.select('name').all.map(&:name), {include_blank: true}) %></div>
       </div>
       <div class="form-group">
         <%= f.label :physical_expiration_date, :class => "col-sm-3 control-label" %>
