--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -25,10 +25,46 @@
     <table class="table table-striped table-hover">
       <thead>
         <tr>
-          <th>Last Name</th>
-          <th>First Name</th>
-          <th>Username</th>
-          <th>Last Sign In</th>
+          <th>
+          	<%= sortable "last_name", "Last Name" %>
+          	<% if sort_column == "last_name" %>
+          		<% if sort_direction == "asc" %>
+          			<span class="glyphicon glyphicon-chevron-up"></span>
+          		<% else %>
+          			<span class="glyphicon glyphicon-chevron-down"></span>
+          		<% end %>
+          	<% end %>
+          </th>
+          <th>
+          	<%= sortable "first_name", "First Name" %>
+          	<% if sort_column == "first_name" %>
+          		<% if sort_direction == "asc" %>
+          			<span class="glyphicon glyphicon-chevron-up"></span>
+          		<% else %>
+          			<span class="glyphicon glyphicon-chevron-down"></span>
+          		<% end %>
+          	<% end %>
+          </th>
+          <th>
+          	<%= sortable "username", "Username" %>
+          	<% if sort_column == "username" %>
+          		<% if sort_direction == "asc" %>
+          			<span class="glyphicon glyphicon-chevron-up"></span>
+          		<% else %>
+          			<span class="glyphicon glyphicon-chevron-down"></span>
+          		<% end %>
+          	<% end %>
+          </th>
+          <th>
+          	<%= sortable "last_sign_in_at", "Last Sign In" %>
+          	<% if sort_column == "last_sign_in_at" %>
+          		<% if sort_direction == "asc" %>
+          			<span class="glyphicon glyphicon-chevron-up"></span>
+          		<% else %>
+          			<span class="glyphicon glyphicon-chevron-down"></span>
+          		<% end %>
+          	<% end %>
+          </th>
           <th></th>
         </tr>
       </thead>
