--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New company</h1>
+<% provide(:title, 'New Company') %>
+<%= content_for :heading do %>
+    <%= render 'layouts/buttons/back_button' %>
+    New Company
+<% end %>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', companies_path %>
