--- a/app/views/manual/faq.html.erb
+++ b/app/views/manual/faq.html.erb
@@ -1,8 +1,8 @@
-<% provide(:title, 'Common Issues') %>
+<% provide(:title, 'FAQ') %>
 
 <%= content_for :heading do %>
     <%= render 'layouts/buttons/back_button' %>
-    Common Issues
+    FAQ
 <% end %>
 
 <h3>CanCan Access Denied</h3>
