--- a/app/views/ratings/edit.html.erb
+++ b/app/views/ratings/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing rating</h1>
+<% provide(:title, 'Editing Rating') %>
+<%= content_for :heading do %>
+    <%= render 'layouts/buttons/back_button' %>
+    <%= link_to(show_rating_path(@rating), :class => "btn btn-lg btn-link pull-right", title: "Show", method: :get) do %>            
+        <span class="glyphicon glyphicon-eye-open"></span> Show
+    <% end %>
+    Editing Rating
+<% end %>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @rating %> |
-<%= link_to 'Back', ratings_path %>
