--- a/app/views/ratings/new.html.erb
+++ b/app/views/ratings/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New rating</h1>
+<% provide(:title, 'New Rating') %>
+<%= content_for :heading do %>
+    <%= render 'layouts/buttons/back_button' %>
+    New Rating
+<% end %>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', ratings_path %>
