--- a/app/views/rides/_form.html.erb
+++ b/app/views/rides/_form.html.erb
@@ -18,15 +18,23 @@
     </div>
     <div class="form-group">
       <%= f.label :rider_id, :class => "col-sm-3 control-label" %>
-      <div class="col-sm-5"><%= f.number_field :rider_id, :class => "form-control" %></div>
+      <div class="col-sm-5"><%= f.text_field :rider_id, :class => "form-control", :step => 'any' %></div>
     </div>
     <div class="form-group">
-      <%= f.label :start, :class => "col-sm-3 control-label" %>
-      <div class="col-sm-5"><%= f.number_field :start, :class => "form-control" %></div>
+      <%= f.label :start_latitude, :class => "col-sm-3 control-label" %>
+      <div class="col-sm-5"><%= f.number_field :start_latitude, :class => "form-control", :step => 'any' %></div>
     </div>
     <div class="form-group">
-      <%= f.label :end, :class => "col-sm-3 control-label" %>
-      <div class="col-sm-5"><%= f.number_field :end, :class => "form-control" %></div>
+      <%= f.label :start_longitude, :class => "col-sm-3 control-label" %>
+      <div class="col-sm-5"><%= f.number_field :start_longitude, :class => "form-control", :step => 'any' %></div>
+    </div>
+    <div class="form-group">
+      <%= f.label :end_latitude, :class => "col-sm-3 control-label" %>
+      <div class="col-sm-5"><%= f.number_field :end_latitude, :class => "form-control", :step => 'any' %></div>
+    </div>
+    <div class="form-group">
+      <%= f.label :end_longitude, :class => "col-sm-3 control-label" %>
+      <div class="col-sm-5"><%= f.number_field :end_longitude, :class => "form-control", :step => 'any' %></div>
     </div>
     <div class="form-group">
       <%= f.label :estimated_fare, :class => "col-sm-3 control-label" %>
