--- a/app/views/manual/check_rating.html.erb
+++ b/app/views/manual/check_rating.html.erb
@@ -4,7 +4,7 @@
     <%= link_to(man_get_stats_path, :class => "btn btn-lg btn-link pull-right", title: "Next", method: :get) do %>            
         <span class="glyphicon glyphicon-chevron-right"></span> Next
     <% end %>
-    <%= link_to(man_check_rating_path, :class => "btn btn-lg btn-link pull-right", title: "Prev", method: :get) do %>            
+    <%= link_to(man_rate_path, :class => "btn btn-lg btn-link pull-right", title: "Prev", method: :get) do %>            
         <span class="glyphicon glyphicon-chevron-left"></span> Prev
     <% end %>
     <strong>Step 4:</strong> Rating Retrieval
