--- a/app/views/static_pages/import_export.html.erb
+++ b/app/views/static_pages/import_export.html.erb
@@ -47,6 +47,20 @@ TODO This page needs some formatting..
         <% end %>
     </div>
 
+<h2>Companies</h2>
+    <div>
+        <%= button_to(download_companies_path, :class => "btn btn-default", :method => :get) do %>            
+            <span class="glyphicon glyphicon-export"></span> Export Companies
+        <% end %>
+
+        <%= form_tag import_companies_path, multipart: true do %>
+            <%= file_field_tag :file %>
+            <%= button_tag(type: "submit", class: "btn btn-default") do %>
+                <i class="glyphicon glyphicon-import"></i>Import Companies 
+            <% end %>
+        <% end %>
+    </div>
+
 <h2>Drivers</h2>
     <div>
         <%= button_to(download_drivers_path, :class => "btn btn-default", :method => :get) do %>            
@@ -60,16 +74,16 @@ TODO This page needs some formatting..
             <% end %>
         <% end %>
     </div>
-<h2>Companies</h2>
+<h2>Documents</h2>
     <div>
-        <%= button_to(download_companies_path, :class => "btn btn-default", :method => :get) do %>            
-            <span class="glyphicon glyphicon-export"></span> Export Companies
+        <%= button_to(download_documents_path, :class => "btn btn-default", :method => :get) do %>            
+            <span class="glyphicon glyphicon-export"></span> Export Documents
         <% end %>
 
-        <%= form_tag import_companies_path, multipart: true do %>
+        <%= form_tag import_documents_path, multipart: true do %>
             <%= file_field_tag :file %>
             <%= button_tag(type: "submit", class: "btn btn-default") do %>
-                <i class="glyphicon glyphicon-import"></i>Import Companies 
+                <i class="glyphicon glyphicon-import"></i>Import Documents 
             <% end %>
         <% end %>
     </div>
@@ -99,16 +113,16 @@ TODO This page needs some formatting..
             <% end %>
         <% end %>
     </div>
-<h2>Documents</h2>
+<h2>Rides</h2>
     <div>
-        <%= button_to(download_documents_path, :class => "btn btn-default", :method => :get) do %>            
-            <span class="glyphicon glyphicon-export"></span> Export Documents
+        <%= button_to(download_rides_path, :class => "btn btn-default", :method => :get) do %>            
+            <span class="glyphicon glyphicon-export"></span> Export Rides
         <% end %>
 
-        <%= form_tag import_documents_path, multipart: true do %>
+        <%= form_tag import_rides_path, multipart: true do %>
             <%= file_field_tag :file %>
             <%= button_tag(type: "submit", class: "btn btn-default") do %>
-                <i class="glyphicon glyphicon-import"></i>Import Documents 
+                <i class="glyphicon glyphicon-import"></i>Import Rides 
             <% end %>
         <% end %>
     </div>
