company_id => Company.name

--- a/app/views/drivers/_row_content.html.erb
+++ b/app/views/drivers/_row_content.html.erb
@@ -1,5 +1,5 @@
 <td class="table-link" onclick="<%= link %>"><%= row.last_name << ", " << row.first_name << " " << row.middle_name %></td>
-<td class="table-link" onclick="<%= link %>"><%= row.company_id %></td>
+<td class="table-link" onclick="<%= link %>"><%= row.company.name %></td>
 <td class="table-link" onclick="<%= link %>"><%= row.permit_expiration_date %></td>
 <td class="table-link" onclick="<%= link %>"><%= row.permit_number %></td>
 
