--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,17 +3,16 @@
 
     <p><div class="row">
     <div class="col-md-10 col-sm-10">
-        <form class="form" role="search">
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search...">
-                    <span class="input-group-btn">
-                        <button class="btn btn-default" type="button">
-                            <span class="glyphicon glyphicon-search"></span>
-                        </button>
-                    </span>
-            </div><!--input-group -->
-        </form>
+		<%= form_tag(users_path, method: :get, :class => "input-group") do %>
+			<%= text_field_tag :search, params[:search], :class => "form-control", placeholder: "Search..." %>
+			<span class="input-group-btn">
+				<%= button_to(users_path, :class => "btn btn-defualt", role: "button", title: "Search", :method => :search) do %>
+				    <span type="submit"class="glyphicon glyphicon-search"></span>
+			  	<% end %>
+		  	</span>
+		<% end %>
     </div>
+    
     <div class="col-md-2 col-sm-2">
             <%= button_to(new_user_path, :class => "btn btn-default", role: "button", title: "New User", method: :get) do %>            
                 <span class="glyphicon glyphicon-plus"></span> Add User
