--- a/app/views/riders/index.html.erb
+++ b/app/views/riders/index.html.erb
@@ -3,16 +3,14 @@
     
     <p><div class="row">
     <div class="col-md-10 col-sm-10">
-        <div class="form" role="search">
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search...">
-                    <span class="input-group-btn">
-                        <button class="btn btn-default" type="button">
-                            <span class="glyphicon glyphicon-search"></span>
-                        </button>
-                    </span>
-            </div><!--input-group -->
-        </div>
+		<%= form_tag(riders_path, method: :get, :class => "input-group") do %>
+			<%= text_field_tag :search, params[:search], :class => "form-control", placeholder: "Search..." %>
+			<span class="input-group-btn">
+				<%= button_to(riders_path, :class => "btn btn-defualt", role: "button", title: "Search", :method => :search) do %>
+				    <span type="submit"class="glyphicon glyphicon-search"></span>
+			  	<% end %>
+		  	</span>
+		<% end %>
     </div>
     <div class="col-md-2 col-sm-2">
             <%= button_to(new_rider_path, :class => "btn btn-default", :method => :get) do %>            
@@ -26,7 +24,14 @@
       <thead>
         <tr>
           <th>
-            UUID
+          	<%= sortable "uuid", "UUID" %>
+          	<% if sort_column == "uuid" %>
+          		<% if sort_direction == "asc" %>
+          			<span class="glyphicon glyphicon-chevron-up"></span>
+          		<% else %>
+          			<span class="glyphicon glyphicon-chevron-down"></span>
+          		<% end %>
+          	<% end %>
          </th>
           <th>
             Total Ratings
