Adjusted Next button

--- a/app/views/manual/rate.html.erb
+++ b/app/views/manual/rate.html.erb
@@ -2,7 +2,7 @@
 
 <%= content_for :heading do %>
     <%= link_to(man_check_rating_path, :class => "btn btn-lg btn-link pull-right", title: "Next", method: :get) do %>            
-        <span class="glyphicon glyphicon-chevron-right"></span> Next
+        Next <span class="glyphicon glyphicon-chevron-right"></span> 
     <% end %>
     <%= link_to(man_add_driver_path, :class => "btn btn-lg btn-link pull-right", title: "Prev", method: :get) do %>            
         <span class="glyphicon glyphicon-chevron-left"></span> Prev
