--- a/app/views/manual/check_rating.html.erb
+++ b/app/views/manual/check_rating.html.erb
@@ -2,7 +2,7 @@
 
 <%= content_for :heading do %>
     <%= link_to(man_get_stats_path, :class => "btn btn-lg btn-link pull-right", title: "Next", method: :get) do %>            
-        <span class="glyphicon glyphicon-chevron-right"></span> Next
+        Next <span class="glyphicon glyphicon-chevron-right"></span> 
     <% end %>
     <%= link_to(man_rate_path, :class => "btn btn-lg btn-link pull-right", title: "Prev", method: :get) do %>            
         <span class="glyphicon glyphicon-chevron-left"></span> Prev
