--- a/app/views/layouts/buttons/_attach_button.html.erb
+++ b/app/views/layouts/buttons/_attach_button.html.erb
@@ -1,3 +1,3 @@
-<%= link_to attach_doc_path(item), title: "Attach Doc", class: "btn btn-link btn-lg pull-right" do %>
+<%= link_to attach_doc_path(item), title: "Attach Doc", class: "btn btn-nav btn-lg pull-right" do %>
     <span class="glyphicon glyphicon-paperclip"></span> Attach Doc
 <% end %>
