--- a/app/views/layouts/buttons/_edit_button.html.erb
+++ b/app/views/layouts/buttons/_edit_button.html.erb
@@ -1,3 +1,3 @@
-<%= link_to({controller: controller.controller_path, id: item, action: 'edit'}, :class => "btn btn-lg btn-link pull-right", title: "Edit", method: :get) do %>            
+<%= link_to({controller: controller.controller_path, id: item, action: 'edit'}, :class => "btn btn-lg btn-nav pull-right", title: "Edit", method: :get) do %>            
         <span class="glyphicon glyphicon-pencil"></span> Edit
 <% end %>
