--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,14 +5,77 @@ body {
   padding-top: 50px;
 }
 
+
+.btn-nav {
+  @include button-variant($btn-default-color,  rgba(0,0,0,0), rgba(0,0,0,0));
+}
+
+
+.table-show {
+  @extend .table-condensed;
+  > thead,
+  > tbody,
+  > tfoot {
+    > tr {
+      > th,
+      > td { border-top: 0; }
+    }
+  }
+  > thead > tr > th {
+    border-bottom: 0;
+  }
+  > caption + thead,
+  > colgroup + thead,
+  > thead:first-child {
+    > tr:first-child {
+      > th,
+      > td {
+        border-top: 0;
+      }
+    }
+  }
+  > tbody + tbody {
+    border-top: 0;
+  }
+}  
+
+.table-rankings {
+  @extend .table;
+  > thead,
+  > tbody,
+  > tfoot {
+    > tr {
+      > th,
+      > td { border-top: 0; }
+    }
+  }
+  > thead > tr > th {
+    border-bottom: 0;
+  }
+  > caption + thead,
+  > colgroup + thead,
+  > thead:first-child {
+    > tr:first-child {
+      > th,
+      > td {
+        border-top: 0;
+      }
+    }
+  }
+  > tbody + tbody {
+    border-top: 0;
+  }
+}  
+
+.nav-side {
+    font-size: $font-size-h5;
+} 
+
 /* navbar-nav */
 
 .navbar-collapse > ul > li {
   font-size: $font-size-h5;
 }
-
-
-
 
 .sub-header {
   padding-bottom: 10px;
@@ -27,6 +90,7 @@ body {
 .sidebar {
   display: none;
 }
+
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
@@ -36,33 +100,12 @@ body {
     z-index: 1000;
     display: block;
     padding: 20px;
+    padding-right: 0px;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #fff;
     border-right: 1px solid #eee;
   }
 }
-
-/* Sidebar navigation */
-.nav-sidebar {
-  margin-right: -21px; /* 20px padding + 1px border */
-  margin-bottom: 20px;
-  margin-left: -20px;
-}
-.nav-sidebar > li > a {
-  padding-right: 20px;
-  padding-left: 20px;
-  font-size: $font-size-h5;
-}
-.nav-sidebar > li:hover > a {
-  background-color: $gray;
-}
-
-.nav-sidebar > .active > a {
-  color: $body-bg;
-  background-color: $brand-primary;
-}
-
 
 /*
  * Main content
@@ -71,6 +114,7 @@ body {
 .main {
   padding: 20px;
 }
+
 @media (min-width: 768px) {
   .main {
     padding-right: 40px;
