--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,24 +1,26 @@
-
-<div id="navbar_sidebar" class="container-fluid">
-  <% if controller.controller_path == '#' %>
-    <ul class="nav">
-      <li><%= link_to "link1", '#' %></li>
-      <li><%= link_to "link2", '#' %></li>
-      <li><%= link_to "link3", '#' %></li>
-  <% else %>
-    <ul class="nav nav-sidebar">
+<div class="col-md-2 col-sm-2 col-md-offset-1 col-sm-offset-0 sidebar">
+<div class="container-fluid">
+    <ul class="nav nav-side nav-pills nav-stacked">
       <% if current_user.try(:admin?) %>
         <li class= <%= controller.controller_path == 'users' ? 'active' : '' %> ><%= link_to "Users", users_path %></li>
       <% end %>
-      <li class= <%= controller.controller_path == 'drivers' ? 'active' : '' %> ><%= link_to "Drivers", drivers_path %></li>
-      <li class= <%= controller.controller_path == 'ratings' ? 'active' : '' %> ><%= link_to "Ratings", ratings_path %></li>    
-      <li class= <%= controller.controller_path == 'riders' ? 'active' : '' %> ><%= link_to "Riders", riders_path %></li>    
-      <li class= <%= controller.controller_path == 'rides' ? 'active' : '' %> ><%= link_to "Rides", rides_path %></li>    
+      <li class= <%= controller.controller_path == 'drivers' ? 'active' : '' %> ><%= link_to "Drivers", drivers_path %></li>   
       <li class= <%= controller.controller_path == 'companies' ? 'active' : '' %> ><%= link_to "Companies", companies_path %></li>    
       <li class= <%= controller.controller_path == 'documents' ? 'active' : '' %> ><%= link_to "Documents", documents_path %></li>    
       <% if current_user.try(:admin?) %>
-        <li><%= link_to "Import/Export", import_export_path %></li>
+        <li class= <%= (controller.controller_path == 'static_pages' && controller.action_name == 'import_export') ? 'active' : '' %>>
+          <%= link_to "Import/Export", import_export_path %></li>
       <% end %>
+      <li>
+        <a href="#" data-toggle="collapse" data-target="#more"> More... </a>
+        <div id="more" class="container-fluid collapse">
+          <ul class="nav nav-side nav-pills nav-stacked">
+            <li class= <%= controller.controller_path == 'riders' ? 'active' : '' %> ><%= link_to "Riders", riders_path %></li>    
+            <li class= <%= controller.controller_path == 'rides' ? 'active' : '' %> ><%= link_to "Rides", rides_path %></li> 
+            <li class= <%= controller.controller_path == 'ratings' ? 'active' : '' %> ><%= link_to "Ratings", ratings_path %></li>  
+          </ul>
+        </div>
+      </li>
     </ul>
-  <% end %>
+</div>
 </div>
