--- a/app/views/static_pages/overview.html.erb
+++ b/app/views/static_pages/overview.html.erb
@@ -1,4 +1,135 @@
 <% provide(:title, 'Home') %>
-<% provide(:heading, 'Overview') %>
+<% provide(:heading, 'Overview') %> 
 
-
+<div class="container-fluid">
+<div class="row">
+  <div class="col-sm-6 col-md-6">
+  <h3>Driver Rankings</h3>
+  <p>
+    <div class="btn-group" data-toggle="buttons">
+      <label class="btn btn-default btn-xs active">
+        <input type="radio" name="options" id="best">Best of
+      </label>
+      <label class="btn btn-default btn-xs">
+        <input type="radio" name="options" id="worst">Worst of
+      </label>
+    </div>
+    <div class="btn-group" data-toggle="buttons">
+      <label class="btn btn-default btn-xs">
+        <input type="radio" name="time" id="day">Today
+      </label>
+      <label class="btn btn-default btn-xs">
+        <input type="radio" name="time" id="week">This Week
+      </label>
+      <label class="btn btn-default btn-xs">
+        <input type="radio" name="time" id="month">This Month
+      </label>
+      <label class="btn btn-default btn-xs">
+        <input type="radio" name="time" id="year">This Year
+      </label>
+      <label class="btn btn-default btn-xs active">
+        <input type="radio" name="time" id="all">Overall
+      </label>
+    </div>
+    
+    <script>
+      $('#best').click(function () {
+        
+      });
+      $('#worst').click(function () {
+        
+      });
+      $('#day').click(function () {
+        
+      });
+      $('#week').click(function () {
+        
+      });
+      $('#month').click(function () {
+        
+      });
+      $('#year').click(function () {
+        
+      });
+      $('#all').click(function () {
+        
+      });
+    </script>
+  </p>
+  
+  <table class="table-rankings table-hover">
+      <% @drivers.each do |driver| %>
+        <%= render partial: 'static_pages/overview/driver_row', locals: {number: "1", driver: driver} %>
+      <% end %>
+    </table>
+    <div class="panel-footer">
+      see more... link to dashboard sorted one way or another?
+    </div>
+    
+  </div>
+  <div class="col-sm-6 col-md-6">
+  <h3>Company Rankings</h3>
+  <p>
+    <div class="btn-group" data-toggle="buttons">
+      <label class="btn btn-default btn-xs active">
+        <input type="radio" name="options" id="best">Best of
+      </label>
+      <label class="btn btn-default btn-xs">
+        <input type="radio" name="options" id="worst">Worst of
+      </label>
+    </div>
+    <div class="btn-group" data-toggle="buttons">
+      <label class="btn btn-default btn-xs">
+        <input type="radio" name="time" id="day">Today
+      </label>
+      <label class="btn btn-default btn-xs">
+        <input type="radio" name="time" id="week">This Week
+      </label>
+      <label class="btn btn-default btn-xs">
+        <input type="radio" name="time" id="month">This Month
+      </label>
+      <label class="btn btn-default btn-xs">
+        <input type="radio" name="time" id="year">This Year
+      </label>
+      <label class="btn btn-default btn-xs active">
+        <input type="radio" name="time" id="all">Overall
+      </label>
+    </div>
+    
+    <script>
+      $('#best').click(function () {
+        
+      });
+      $('#worst').click(function () {
+        
+      });
+      $('#day').click(function () {
+        
+      });
+      $('#week').click(function () {
+        
+      });
+      $('#month').click(function () {
+        
+      });
+      $('#year').click(function () {
+        
+      });
+      $('#all').click(function () {
+        
+      });
+    </script>
+  </p>
+  
+  <table class="table-rankings table-hover">
+      <% @companies.each do |company| %>
+        <%= render partial: 'static_pages/overview/company_row', locals: {number: "1", company: company} %>
+      <% end %>
+    </table>
+    <div class="panel-footer">
+      see more... link to dashboard sorted one way or another?
+    </div>
+    
+  </div>
+</div>
+</div>
