Just added a couple colors to the overview page. Those filter buttons are still nonfunctional. Possibly could use js functions to filter the tables? not sure.

--- a/app/views/static_pages/overview.html.erb
+++ b/app/views/static_pages/overview.html.erb
@@ -7,10 +7,10 @@
   <h3>Driver Rankings</h3>
   <p>
     <div class="btn-group" data-toggle="buttons">
-      <label class="btn btn-default btn-xs active">
+      <label class="btn btn-success btn-xs active">
         <input type="radio" name="options" id="best">Best of
       </label>
-      <label class="btn btn-default btn-xs">
+      <label class="btn btn-danger btn-xs">
         <input type="radio" name="options" id="worst">Worst of
       </label>
     </div>
@@ -71,10 +71,10 @@
   <h3>Company Rankings</h3>
   <p>
     <div class="btn-group" data-toggle="buttons">
-      <label class="btn btn-default btn-xs active">
+      <label class="btn btn-success btn-xs active">
         <input type="radio" name="options" id="best">Best of
       </label>
-      <label class="btn btn-default btn-xs">
+      <label class="btn btn-danger btn-xs">
         <input type="radio" name="options" id="worst">Worst of
       </label>
     </div>
