Resized the images for the drivers and companies

--- a/app/views/static_pages/overview/_company_row.html.erb
+++ b/app/views/static_pages/overview/_company_row.html.erb
@@ -4,7 +4,7 @@
   <td>
     <li class="media">
       <div class="pull-left">
-        <%= image_tag company.logo.url, :class=>"media-object img-rounded"%>
+        <%= image_tag company.logo.url(:thumb), :class=>"media-object img-rounded"%>
         <!-- make this image 64xsomething -->
       </div>
       <div class="media-body">
