--- a/app/views/static_pages/overview/_driver_row.html.erb
+++ b/app/views/static_pages/overview/_driver_row.html.erb
@@ -4,7 +4,7 @@
   <td>
     <li class="media">
       <div class="pull-left">
-        <%= image_tag driver.avatar.url, :class=>"media-object img-rounded"%>
+        <%= image_tag driver.avatar.url(:thumb), :class=>"media-object img-rounded"%>
         <!-- make this image 64x64 -->
       </div>
       
