--- a/app/views/ratings/show.html.erb
+++ b/app/views/ratings/show.html.erb
@@ -28,3 +28,8 @@
   <strong>Timestamp:</strong>
   <%= @rating.timestamp %>
 </p>
+
+<p>
+  <strong><%= @rating.ride_id.nil? ? "No Associated Ride" : link_to(show_ride_path(@rating.ride_id), "View Ride") %></strong>
+</p>
+
