Added view for ride linked to the rating

--- a/app/views/ratings/_form.html.erb
+++ b/app/views/ratings/_form.html.erb
@@ -21,6 +21,10 @@
       <div class="col-sm-5"><%= f.text_field :rider_id%></div>
     </div>
     <div class="form-group">
+      <%= f.label :ride_id, :class => "col-sm-3 control-label" %>
+      <div class="col-sm-5"><%= f.number_field :ride_id%></div>
+    </div>
+    <div class="form-group">
       <%= f.label :rating, :class => "col-sm-3 control-label" %>
       <div class="col-sm-5"><%= f.number_field :rating%></div>
     </div>
