--- a/app/views/rides/_form.html.erb
+++ b/app/views/rides/_form.html.erb
@@ -21,6 +21,10 @@
       <div class="col-sm-5"><%= f.text_field :rider_id, :class => "form-control", :step => 'any' %></div>
     </div>
     <div class="form-group">
+      <%= f.label :rating_id, :class => "col-sm-3 control-label" %>
+      <div class="col-sm-5"><%= f.text_field :rating_id, :class => "form-control", :step => 'any' %></div>
+    </div>
+    <div class="form-group">
       <%= f.label :start_latitude, :class => "col-sm-3 control-label" %>
       <div class="col-sm-5"><%= f.number_field :start_latitude, :class => "form-control", :step => 'any' %></div>
     </div>
