--- a/app/views/static_pages/overview/_company_row.html.erb
+++ b/app/views/static_pages/overview/_company_row.html.erb
@@ -4,12 +4,12 @@
   <td>
     <li class="media">
       <div class="pull-left">
-        <%= image_tag company.logo.url(:thumb), :class=>"media-object img-rounded"%>
+        <%= image_tag company.logo.url(:thumb), :alt => company.name, :class=>"media-object img-rounded"%>
         <!-- make this image 64xsomething -->
       </div>
       <div class="media-body">
         <h4 class="media-heading"><%= company.name %></h4>
-        <em>Average rating of (?)</em>
+        <em>Average rating of (<%= company.average_rating %>)</em>
       </div>
     </li>
   </td>
