FAQ added to manual/help page

--- a/app/views/manual/faq.html.erb
+++ b/app/views/manual/faq.html.erb
@@ -5,4 +5,53 @@
     FAQ
 <% end %>
 
-<h3>CanCan Access Denied</h3>
+<h3>CanCan Access Denied</h3> <!--What is this? -->
+
+<p>
+	<strong>How can I view a driver's profile? documents? ratings?</strong><br>
+	To view a driver's profile, click on the row with that driver on the drivers page. To view a driver's documents, click on the tab that says Dosuments on the driver's profile page. To view a driver's ratings, click on the tab at the top of the driver's profile page.
+</p>				
+<p>
+	<strong>How can I search for a driver's documents?</strong><br>
+	On each driver's profile page there is a tab below the driver's name labeled documents. All of the driver's documents will be here.
+</p>
+<p>
+	<strong>How can I edit a driver?</strong><br>
+	To edit a driver you can click the button that has the icon of a pencil and says Edit on the driver's profile page. You can also click on the button with the icon of a pencil on the driver's row on the driver's page.
+</p>
+<p>
+	<strong>How can I remove a driver?</strong><br>
+To remove a driver, click on the third button with the icon of trash can on the driver's row on the driver's page.
+</p>
+<p>
+	<strong>How can I add documents to a driver?</strong><br>
+	To add a documnet to a driver, on the driver's profile page click the Attach Doc button at the top of the page. Or on the driver's page click the button on the driver's row with the upside-down triangle, the first button.
+</p>
+<p>
+	<strong>Can I sort the table of drivers or users? How?</strong><br>
+	To sort a table, click on the column header by which you want to sort. Clicking the header once will sort the column in ascending order (e.g. A to Z), clicking it again will sort the column in descending order (e.g. Z to A).
+</p>
+<p>
+	<strong>Why is my search for drivers by company name not working?</strong><br>
+	If you are searching by company name on the driver's page and nothing is being returned, make sure evrything is spelled correctly and there are no extra spaces. Also ensure that you are searching by the company's full name. For example if searching for drivers from Allied Cab, instead of searching for allied, search for allied cab.
+</p>
+<p>
+	<strong>Why is my search by a date not working?</strong><br>
+	To search by a date, the date must be in the format yyyy-mm-dd if searching for a particular date. If just searching for a particular month yyyy-mm will work. If searching for a particular day mm-dd will work.
+</p>
+<p>
+	<strong>Can I add or remove a user? How?</strong><br>
+	Only the administrator can add or remove a user. This is done in the same manner as adding and removing a driver.
+</p>
+<p>
+	<strong>How can I import or export a table of drivers, companies, users, ratings, rides, riders, or other documents?</strong><br>
+	To import and export tables click on the Import/Export tab on the sidebar of the page. Then go to the which group you want to import and export, chose a file and click import or export.
+</p>
+<p>
+	<strong>Why is the picture I am attaching to a driver not uploading?</strong><br>
+Make sure that the image is in the correct format. Look at the file extension (e.g. .jpeg) of a file, make sure that it is a .jpeg, .png, or .bmp file.
+</p>
+<p>
+	<strong>Why can't I upload, import, or export a file?</strong><br>
+	Make sure that all the information in the file is comma separated. And also make sure that the file format is a correct format: Microsoft Word document (.doc and .docx), PDF (.pdf), text files (.txt), and .dvi format.
+</p>
