--- a/app/views/ratings/_row_content.html.erb
+++ b/app/views/ratings/_row_content.html.erb
@@ -1,4 +1,4 @@
-<td class="table-link" onclick="<%= link %>"><%= row.driver.last_name << ", " << row.driver.first_name %></td>
+<td class="table-link" onclick="<%= link %>"><%= row.driver.last_name %>, <%= row.driver.first_name %></td>
 <td class="table-link" onclick="<%= link %>"><%= row.driver.company_id %></td>
 <td class="table-link" onclick="<%= link %>"><%= row.rating %></td>
 <td class="table-link" onclick="<%= link %>"><%= row.comments %></td>
