Added pagination, ratings/rides search

--- a/app/views/layouts/_index.html.erb
+++ b/app/views/layouts/_index.html.erb
@@ -18,3 +18,5 @@
     <tbody><%= render partial: 'layouts/index/tbody', locals: {items: items} %></tbody>
   </table>
 </div>
+
+<%= paginate items %>
