--- a/app/views/drivers/show.html.erb
+++ b/app/views/drivers/show.html.erb
@@ -53,12 +53,12 @@
 
 	<tr>
 	  	<th>Height:</th>
-	  	<td><var><%= @driver.height %></var></td>
+	  	<td><var><%= @driver.height/12 %> ft <%= @driver.height%12 %> in</var></td>
 	</tr>
 
 	<tr>
 	  	<th>Weight:</th>
-	  	<td><var><%= @driver.weight %></var></td>
+	  	<td><var><%= @driver.weight lbs%></var></td>
 	</tr>
 
 	<tr>
