--- a/app/views/drivers/show.html.erb
+++ b/app/views/drivers/show.html.erb
@@ -58,7 +58,7 @@
 
 	<tr>
 	  	<th>Weight:</th>
-	  	<td><var><%= @driver.weight lbs%></var></td>
+	  	<td><var><%= @driver.weight %> lbs</var></td>
 	</tr>
 
 	<tr>
