Specified using the preview size

--- a/app/views/drivers/show/_profile.html.erb
+++ b/app/views/drivers/show/_profile.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     
     <div class="col-sm-7 col-md-5">
-        <div class="thumbnail"><%= image_tag @driver.avatar.url, :class=>"img-rounded" %></div>
+        <div class="thumbnail"><%= image_tag @driver.avatar.url(:preview), :class=>"img-rounded" %></div>
     </div>
 	  
 
